[package]
name = "try-tower"
version = "0.1.0"
authors = ["kahgeh <kahgeh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower="0.4.8"
tokio={ version="1.9.0", features=["full"]}
hyper={ version="0.14.11", features=["full"]}
futures = "0.3.16"
tracing= "0.1.26"
tracing-subscriber="0.2.19" 
pin-project = "1.0.8"
